--- a/jobportal/package.json
+++ b/jobportal/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
+    "axios": "^1.13.2",
     "body-parser": "^2.2.0",
     "bootstrap": "^5.3.8",
     "cors": "^2.8.5",
@@ -25,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.8.2",
+    "sweetalert2": "^11.26.4",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
