--- a/jobportal/package.json
+++ b/jobportal/package.json
@@ -21,6 +21,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.8.2",
     "react-toastify": "^11.0.5",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.26.10"
   },
   "devDependencies": {
