chmage mail of DB and Otp sender

--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 PORT=5000
-MONGO_URI=mongodb+srv://Sayan:sayan123@cluster0.wwxymt9.mongodb.net/JobNest?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://jobnestwork_db_user:jobnest1234@jobnest.fqgjayz.mongodb.net/JobNest
 JWT_SECRET=JobNest@1234
 JWT_EXPIRES_IN=1d
-EMAIL_USER=fakesayan2004@gmail.com
-EMAIL_PASS=bdzprufxqwuhryig
+EMAIL_USER=jobnestwork@gmail.com
+EMAIL_PASS=nxbwkhzpmdjvxtqv
 
